// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerConfirmation > should render 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="css-1m8vfsi"
        color="warning-alt"
        width="3"
      />
      <div
        class="text-theme-warning-200 dark:text-theme-secondary-800 css-1aie31u"
        type="vertical"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LedgerConfirmation > should render with children 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="css-1m8vfsi"
        color="warning-alt"
        width="3"
      />
      <div
        class="text-theme-warning-200 dark:text-theme-secondary-800 css-1aie31u"
        type="vertical"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      Transaction Details
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;

exports[`LedgerConfirmation > should render with children and custom heading 1`] = `
<DocumentFragment>
  <div
    class="space-y-5"
  >
    <div
      class="text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="flex items-center space-x-3 rounded-xl border border-theme-warning-200 bg-theme-warning-50 px-6 py-5 dark:border-theme-warning-600 dark:bg-transparent"
      data-testid="LedgerConfirmation-loading_message"
    >
      <div
        class="css-1m8vfsi"
        color="warning-alt"
        width="3"
      />
      <div
        class="text-theme-warning-200 dark:text-theme-secondary-800 css-1aie31u"
        type="vertical"
      />
      <p
        class="font-semibold text-theme-secondary-700 dark:text-theme-warning-600"
      >
        This transaction is pending confirmation
      </p>
    </div>
  </div>
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      heading
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;
